# anki-plugin-html-importer

./: .gitignore  Pipfile  README.md  __init__.py  config.json  gsheets_importer.py  pyproject.toml  pytest.ini  requirements.txt
gsheets_importer/: __init__.py
gsheets_importer/cssutils/: __init__.py
gsheets_importer/lxml/: _elementpath.pyd  builder.pyd  etree.pyd  objectify.pyd
gsheets_importer/lxml/html/: clean.pyd
gsheets_importer/premailer/: __init__.py  cache.py  merge_style.py
gsheets_importer/pynliner/: __init__.py
html_importer/ClaSS2Style/: ClaSS2Style.py
html_importer/lxml/html/: diff.pyd
html_importer/premailer/: premailer.py
src/: __init__.py  init_old.py  util_test.py  utils.py
