[tool.poetry]
name = "anki-plugin-html-importer"
version = "0.1.0"
description = ""
authors = ["ziinc <tzeyiing@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "^4.7"
ClaSS2Style = {git = "https://github.com/arski/ClaSS2Style.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
